# MPITask1_5

./: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
MPI1/: main.cpp
MPI2/: task10.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
MPI3/: task11.cpp  task12.cpp  task13.cpp  task14.cpp  task15.cpp
